# TimerApp

./: GAG_Slide_Content_and_Script.docx  feature_selector.py  package-lock.json  package.json
src/: GitHub-Migration-Confluence-Space.html  GitHub_Migration_FINAL.docx  GitHub_Migration_Full_Plan_v3.docx  GitHub_Migration_Team_Engagement_Plan.docx  GitHub_Migration_Team_Engagement_Plan_v2.docx  app.js  index.html  lightgbm_reproducibility.docx  lightgbm_showntell.docx  lightgbm_showntell.pptx  lightgbm_showntell_v2.docx  lightgbm_showntell_v2s.docx  main.js  styles.css
test1/: __init__.py  config_loader.py  example_config.yaml  exceptions.py  feature_selection.py  init_project.py  pipeline.py  pyproject.toml  test_config_loader.py  utils.py
